--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.8",
+    "prettier": "2.8.1",
     "tailwindcss": "^3.0.23"
   }
 }
